--- a/frontend/src/pages/homepage/services/Services.css
+++ b/frontend/src/pages/homepage/services/Services.css
@@ -10,6 +10,7 @@ div.card-deck {
     grid-row-gap: 3.6vh;
     grid-column-gap: 3.6vw;
     justify-items: center;
+    justify-content: space-evenly;
 }
 
 @media only screen and (min-width: 600px) {
